ADD 【模板模式】 模板模式添加和包命名修改

--- a/pom.xml
+++ b/pom.xml
@@ -36,5 +36,10 @@
       <artifactId>lombok</artifactId>
       <version>1.18.16</version>
     </dependency>
+      <dependency>
+          <groupId>com.baomidou</groupId>
+          <artifactId>mybatis-plus-core</artifactId>
+          <version>3.4.2</version>
+      </dependency>
   </dependencies>
 </project>
