--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,19 @@
   <groupId>com.design</groupId>
   <artifactId>design-patterns</artifactId>
   <version>1.0.0-SNAPSHOT</version>
-  <packaging>jar</packaging>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>8</source>
+                    <target>8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+    <packaging>jar</packaging>
 
   <name>design-patterns</name>
   <url>http://maven.apache.org</url>
@@ -40,6 +52,11 @@
           <groupId>com.baomidou</groupId>
           <artifactId>mybatis-plus-core</artifactId>
           <version>3.4.2</version>
+      </dependency>
+      <dependency>
+          <groupId>cn.hutool</groupId>
+          <artifactId>hutool-all</artifactId>
+          <version>5.8.15</version>
       </dependency>
   </dependencies>
 </project>
